Fix filter style on mobile devices

--- a/src/app/main/products/home/home.mobile.scss
+++ b/src/app/main/products/home/home.mobile.scss
@@ -24,20 +24,19 @@
             & .filters {
                 display: flex;
                 flex-direction: column;
+                border: 0;
 
                 & .search-content {
-                    width: 100%;
+                    width: 90%;
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    margin: 10px;
 
                     & .search {
-                        width: 80%;
-                        border-radius: 10px;
-                        border: 1px solid #ee5816;
-                        padding-left: 7px;
-                        margin-top: 15px;
-                        margin-left: 20px;
+                        width: 100%;
+                        height: 35px;
+                        background: transparent;
                     }
                 }
 
